--- a/Home.html
+++ b/Home.html
@@ -172,7 +172,7 @@
             <!-- Sidebar -->
             <div class="sidebar">
                 <!-- Quick Links -->
-                <div class="quick-links">
+                <!-- <div class="quick-links">
                     <h3>Quick Links</h3>
                     <ul class="links-list">
                         <li><a href="#"><i class="fas fa-book"></i> Course Materials</a></li>
@@ -182,7 +182,9 @@
                         <li><a href="#"><i class="fas fa-user-graduate"></i> Student Portal</a></li>
                         <li><a href="#"><i class="fas fa-id-card"></i> Staff Directory</a></li>
                     </ul>
-                </div>
+                </div> -->
+
+
 
                 <!-- Academic Calendar Modal -->
                 <div id="calendar-modal" class="calendar-modal">
