Updated with Backend integration

--- a/Frontend/Home.html
+++ b/Frontend/Home.html
@@ -283,11 +283,12 @@
         <div class="calendar-content">
             <span class="close-btn admin-close">&times;</span>
             <h3>Admin Login</h3>
-            <form class="login-form">
-                <input type="text" placeholder="Username" required>
-                <input type="password" placeholder="Password" required>
+            <form class="login-form" id="loginForm">
+                <input type="text" id="username" placeholder="Username" required>
+                <input type="password" id="password" placeholder="Password" required>
                 <button type="submit" class="btn btn-primary" style="width: 100%;">Login</button>
             </form>
+
         </div>
     </div>
 
