--- a/Frontend/Home.html
+++ b/Frontend/Home.html
@@ -31,7 +31,7 @@
                         <li><a href="#announcements">Announcements</a></li>
                         <li><a href="#events">Events</a></li>
                         <li><a href="#" id="header-timetable-link">Timetable</a></li>
-                        <li><a href="#">Resources</a></li>
+                        <!-- <li><a href="#">Resources</a></li> -->
                         <li><a href="#contact">Contact</a></li>
                         <li class="mobile-admin-login"><a href="#" id="mobile-admin-login">Admin Login</a></li>
                     </ul>
@@ -260,7 +260,7 @@
                     <a href="#announcements">Announcements</a>
                     <a href="#events">Events</a>
                     <a href="#" id="footer-timetable-link">Timetable</a>
-                    <a href="#">Resources</a>
+                    <!-- <a href="#">Resources</a> -->
                 </div>
 
                 <div class="footer-section" id="contact">
