--- a/Frontend/admin_dashboard.html
+++ b/Frontend/admin_dashboard.html
@@ -23,13 +23,13 @@
 
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Home.html">Home</a></li>
                         <li><a href="#announcements">Announcements</a></li>
                         <li><a href="#events">Events</a></li>
                         <li><a href="#" id="header-timetable-link">Timetable</a></li>
-                        <li><a href="#">Resources</a></li>
+                        <!-- <li><a href="#">Resources</a></li> -->
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="#" id="logoutBtn" class="logout">Logout</a></li>
+                        <li><a href="#" id="logoutButton" class="logout">Logout</a></li>
                     </ul>
                 </nav>
 
@@ -92,7 +92,7 @@
                     <ul class="links-list">
                         <li><a href="#create-announcement"><i class="fas fa-bullhorn"></i> Create Announcement</a></li>
                         <li><a href="#create-event"><i class="fas fa-calendar-plus"></i> Create Event</a></li>
-                        <li><a href="index.html"><i class="fas fa-home"></i> View Main Site</a></li>
+                        <li><a href="Home.html"><i class="fas fa-home"></i> View Main Site</a></li>
                     </ul>
                 </div>
             </div>
@@ -110,7 +110,7 @@
 
                 <div class="footer-section">
                     <h3>Quick Links</h3>
-                    <a href="index.html">Home</a>
+                    <a href="Home.html">Home</a>
                     <a href="#create-announcement">Create Announcement</a>
                     <a href="#create-event">Create Event</a>
                 </div>
