--- a/Frontend/Home.html
+++ b/Frontend/Home.html
@@ -42,7 +42,7 @@
                         <i class="fas fa-search"></i>
                         <input type="text" placeholder="Search...">
                     </div>
-                    <button class="btn btn-primary">Admin Login</button>
+                    <button class="btn btn-primary" id="desktop-admin-login">Admin Login</button>
                 </div>
             </div>
         </div>
@@ -277,9 +277,8 @@
         </div>
     </footer>
 
-    <script src="./JS/script.js"></script>
     <!-- Admin Login Modal -->
-    <div id="admin-login-modal" class="calendar-modal">
+    <!-- <div id="admin-login-modal" class="calendar-modal">
         <div class="calendar-content">
             <span class="close-btn admin-close">&times;</span>
             <h3>Admin Login</h3>
@@ -290,8 +289,25 @@
             </form>
 
         </div>
+    </div> -->
+
+    <!-- Desktop Admin Login -->
+    <div class="search-login">
+        <div class="search-box">
+            <i class="fas fa-search"></i>
+            <input type="text" placeholder="Search..." />
+        </div>
+        <button class="btn btn-primary admin-login-trigger">Admin Login</button>
     </div>
 
+    <!-- Mobile Admin Login -->
+    <li class="mobile-admin-login">
+        <a href="#" class="admin-login-trigger">Admin Login</a>
+    </li>
+
+
+
+    <script src="./JS/script.js"></script>
 </body>
 
 </html>
