--- a/Frontend/admin_dashboard.html
+++ b/Frontend/admin_dashboard.html
@@ -26,7 +26,7 @@
                         <li><a href="Home.html">Home</a></li>
                         <li><a href="#announcements">Announcements</a></li>
                         <li><a href="#events">Events</a></li>
-                        <li><a href="#" id="header-timetable-link">Timetable</a></li>
+                        <!-- <li><a href="#" id="header-timetable-link">Timetable</a></li> -->
                         <!-- <li><a href="#">Resources</a></li> -->
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="#" id="logoutButton" class="logout">Logout</a></li>
