--- a/Frontend/admin_dashboard.html
+++ b/Frontend/admin_dashboard.html
@@ -60,18 +60,18 @@
             <!-- Left Content -->
             <div class="left-content">
                 <!-- Create Announcement Section -->
-                <section class="create-announcement" id="create-announcement">
+                <section class="create-announcement" id="announcements">
                     <h2 class="section-title">Create Announcement</h2>
                     <form id="announcementForm" class="admin-form">
                         <input type="text" id="announcementTitle" placeholder="Title" required>
-                        <input type="text" id="announcementAuthor" placeholder="Author (e.g., Dean’s Office)" required>
+                        <input type="text" id="announcementAuthor" placeholder="Author (e.g., Dean's Office)" required>
                         <textarea id="announcementContent" placeholder="Enter announcement details..." rows="5" required></textarea>
                         <button type="submit" class="btn btn-primary" style="width: 100%;">Post Announcement</button>
                     </form>
                 </section>
 
                 <!-- Create Event Section -->
-                <section class="create-event" id="create-event">
+                <section class="create-event" id="events">
                     <h2 class="section-title">Create Event</h2>
                     <form id="eventForm" class="admin-form">
                         <input type="text" id="eventTitle" placeholder="Event Title" required>
@@ -90,8 +90,8 @@
                 <div class="upcoming-deadlines">
                     <h3>Admin Actions</h3>
                     <ul class="links-list">
-                        <li><a href="#create-announcement"><i class="fas fa-bullhorn"></i> Create Announcement</a></li>
-                        <li><a href="#create-event"><i class="fas fa-calendar-plus"></i> Create Event</a></li>
+                        <li><a href="#announcements"><i class="fas fa-bullhorn"></i> Create Announcement</a></li>
+                        <li><a href="#events"><i class="fas fa-calendar-plus"></i> Create Event</a></li>
                         <li><a href="Home.html"><i class="fas fa-home"></i> View Main Site</a></li>
                     </ul>
                 </div>
@@ -111,8 +111,8 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <a href="Home.html">Home</a>
-                    <a href="#create-announcement">Create Announcement</a>
-                    <a href="#create-event">Create Event</a>
+                    <a href="#announcements">Create Announcement</a>
+                    <a href="#events">Create Event</a>
                 </div>
 
                 <div class="footer-section" id="contact">
@@ -127,9 +127,7 @@
         </div>
     </footer>
 
-    <script src="JS/Admin_Script.js">
-
-    </script>
+    <script src="JS/Admin_Script.js"></script>
 </body>
 
 </html>
