--- a/Frontend/Home.html
+++ b/Frontend/Home.html
@@ -38,10 +38,10 @@
                 </nav>
 
                 <div class="search-login">
-                    <div class="search-box">
-                        <i class="fas fa-search"></i>
-                        <input type="text" placeholder="Search...">
-                    </div>
+                    <!-- <div class="search-box"> -->
+                        <!-- <i class="fas fa-search"></i> -->
+                        <!-- <input type="text" placeholder="Search..."> -->
+                    <!-- </div> -->
                     <button class="btn btn-primary" id="desktop-admin-login" >Admin Login</button>
                 </div>
             </div>
