--- a/Frontend/admin_dashboard.html
+++ b/Frontend/admin_dashboard.html
@@ -34,10 +34,10 @@
                 </nav>
 
                 <div class="search-login">
-                    <div class="search-box">
+                    <!-- <div class="search-box">
                         <i class="fas fa-search"></i>
                         <input type="text" placeholder="Search...">
-                    </div>
+                    </div> -->
                     <button class="btn btn-danger" id="logoutButton">Logout</button>
                 </div>
             </div>
